--- a/public/views/includes/header.html
+++ b/public/views/includes/header.html
@@ -43,6 +43,9 @@
       </div>
       </li>
       <li>
+	<a href="/PR"><span class="glyphicon glyphicon-shopping-cart"></span> PayReq</a>
+      </li>
+      <li>
         <a href="#" data-ng-click="openScannerModal()"><span class="glyphicon glyphicon-qrcode"></span> Scan</a>
       </li>
       <li class="dropdown" data-ng-controller="CurrencyController" data-ng-include="'/views/includes/currency.html'"></li>
