Fixed layout.  Better logic in controller

--- a/public/views/pr.html
+++ b/public/views/pr.html
@@ -1,33 +1,38 @@
 <div data-ng-include src="'/views/includes/connection.html'"></div>
 <section>
   <div class="page-header">
-    <h1>
+    <h2>
       Payment Request
-    </h1>
+    </h2>
   </div>
 </section>
 <section>
-<div class="well" ng-controller="PaymentRequestGenerator">
- <form action="#" name="prForm" class="form-horizontal" role="form" novalidate>
+<div class="container" ng-controller="PaymentRequestGenerator">
+
+<div class="col-xs-12 col-md-8">
+
+<form action="#" name="prForm" class="form-horizontal" role="form" novalidate>
 <fieldset>
 
 <!-- Form Name -->
-<legend>Submit a payment request {{name}}</legend>
+<legend>Submit a {{name}}</legend>
 
 <!-- Multiple Checkboxes -->
 <div class="form-group">
   <label class="col-md-4 control-label" for="prChecks">Generate Bitcoin URLs</label>
-  <div class="col-md-4">
+  <div class="col-md-8">
   <div class="checkbox">
     <label for="prChecks-0">
       <input type="checkbox" name="prChecks" id="prChecks-0" ng-model="pr.TradPR" value="generateTradtional">
-      Traditional Bitcoin URL <small><a href="bitcoin:n24X8LKTVLmGSGZoTcsm3muqgRXyyE51vq?amount=0.098765&label=Test%20URL">bitcoin:n24X8LKTVLmGSGZoTcsm3muqgRXyyE51vq?amount=0.098765&label=Test%20URL</a></small>
+      Traditional Bitcoin URL 
+	<i tooltip="This is compatible with all bitcoin clients. e.g. bitcoin:n24X8LKTVLmGSGZoTcsm3muqgRXyyE51vq?amount=0.098765&label=Test%20Bitcoin%20URI" class="glyphicon glyphicon-question-sign"></i>
     </label>
 	</div>
   <div class="checkbox">
     <label for="prChecks-1">
       <input type="checkbox" name="prChecks" id="prChecks-1" ng-model="pr.PR" value="generatePR">
-      Payment Request URL <small><a href="bitcoin:?r=http%3A%2F%2F172.17.254.107%2Fdemo_website%2Ff.php%3Fh%3De51db2dadaaf1033711bc71cbb9a511d">bitcoin:?r=http%3A%2F%2F172.17.254.107%2Fdemo_website%2Ff.php%3Fh%3De51db2dadaaf1033711bc71cbb9a511d</a></small>
+      Payment Request URL 
+	<i tooltip="For merchants to sign orders with SSL Certs. e.g. bitcoin:?r=http://bitcoin.org/f.php%3Fh%3De51db2dadaaf1033711bc71cbb9a511d" class="glyphicon glyphicon-question-sign"></i>
     </label>
 	</div>
   </div>
@@ -36,7 +41,7 @@
 <!-- Text input-->
 <div ng-if="!pr.PR || (pr.TradPR && pr.PR)" class="form-group">
   <label class="col-md-4 control-label" for="paymentAddress">Address</label>  
-  <div class="col-md-4">
+  <div class="col-md-8">
   <input id="paymentAddress" name="paymentAddress" ng-model="pr.Addr" type="text" placeholder="n24X8LKTVLmGSGZoTcsm3muqgRXyyE51vq" class="form-control input-md">
   <span class="help-block">Address to send payment</span>  
   </div>
@@ -45,7 +50,7 @@
 <!-- Text input-->
 <div class="form-group">
   <label class="col-md-4 control-label" for="paymentAmount">Amount</label>  
-  <div class="col-md-4">
+  <div class="col-md-8">
   <input id="paymentAmount" name="paymentAmount" ng-model="pr.Amt" type="number" placeholder=".5" min="0" class="form-control input-md">
   <span class="help-block">Amount in BTC</span>  
   </div>
@@ -54,7 +59,7 @@
 <!-- Text input-->
 <div class="form-group">
   <label class="col-md-4 control-label" for="paymentReference">Order Number</label>  
-  <div class="col-md-4">
+  <div class="col-md-8">
   <input id="paymentReference" name="paymentReference" type="text" ng-model="pr.Ref" placeholder="ABC2014" class="form-control input-md">
   <span class="help-block">Optional internal reference or order number.  This is not shown to clients.</span>  
   </div>
@@ -63,16 +68,17 @@
 <!-- Textarea -->
 <div class="form-group">
   <label class="col-md-4 control-label" for="prMemo">Description</label>
-  <div class="col-md-4">                     
+  <div class="col-md-8">                     
     <textarea class="form-control" id="prMemo" name="prMemo" ng-model="pr.Desc"> </textarea>
-    <span class="help-block">For label/memo field.  e.g. Items in cart</span>
+    <span ng-if="pr.TradPR" class="help-block">Limited to one line and 50 characters</span>
+    <span ng-if="pr.PR && !(pr.PR && pr.TradPR)" class="help-block">For label/memo field.  e.g. Items in cart</span>
   </div>
 </div>
 
 <!-- Select Basic -->
 <div ng-if="pr.PR" class="form-group">
   <label class="col-md-4 control-label" for="signPRrequest">Sign Request</label>
-  <div class="col-md-4">
+  <div class="col-md-8">
     <select id="signPRrequest" ng-model="pr.Signed" name="signPRrequest" class="form-control" required>
       <option value="merchantCert">Merchant Cert</option>
       <option value="noCert">None</option>
@@ -84,7 +90,7 @@
 <!-- Select Basic -->
 <div ng-if="pr.PR" class="form-group">
   <label class="col-md-4 control-label" for="prExpireTime">Expires?</label>
-  <div class="col-md-4">
+  <div class="col-md-8">
     <select id="prExpireTime" ng-model="pr.Exp" name="prExpireTime" class="form-control" required>
       <option value="5min">In 5 Minutes</option>
       <option value="15min">In 15 Minutes</option>
@@ -98,7 +104,7 @@
 <!-- Text input-->
 <div ng-if="pr.PR" class="form-group">
   <label class="col-md-4 control-label" for="prACK">Thank You Message</label>  
-  <div class="col-md-4">
+  <div class="col-md-8">
   <input id="prACK" name="prACK" type="text" ng-model="pr.Ack" placeholder="Thanks for your purchase!" class="form-control input-md">
   <span class="help-block">Response for customers</span>  
   </div>
@@ -107,7 +113,7 @@
 <!-- Text input-->
 <div ng-if="pr.PR" class="form-group">
   <label class="col-md-4 control-label" for="prRefAddr">Refund Address</label>  
-  <div class="col-md-4">
+  <div class="col-md-8">
   <input id="prRefAddr" name="prRefAddr" type="text" ng-model="pr.RefAddr" placeholder="mtULh5fVZh1eRjugMstMw3WNaMdmW95k1X" class="form-control input-md">
   <span class="help-block">Send refunds to this address</span>  
   </div>
@@ -116,7 +122,7 @@
 <!-- Button -->
 <div class="form-group">
   <label class="col-md-4 control-label" for="submitPR">Process Request</label>
-  <div class="col-md-4">
+  <div class="col-md-8">
     <button class="btn btn-danger" type="reset" value="reset" ng-click="reset()" ng-disabled="isUnchanged(pr)">Reset Form</button>
     <button id="submitPR" name="submitPR" class="btn btn-primary" ng-click="update()" ng-disabled="prForm.$invalid" || "isUnchanged(pr)">Submit</button>
   </div>
@@ -125,6 +131,25 @@
 </fieldset>
 </form>
 
-<p>Signed? {{pr.Signed}} , Amount? {{pr.Amt}}, Address? {{pr.Addr}}, Reference? {{pr.Ref}}, Expires? {{pr.Exp}}, Description? {{pr.Desc}}, PayAck? {{pr.Ack}}, BitAddr? {{pr.TradPR}}, BitPay? {{pr.PR}}, Refund? {{pr.RefAddr}}    </p>
 </div>
 
+<div ng-if="pr.PR||pr.TradPR" class="col-xs-12 col-md-4 col-gray">
+<h2> Results </h2>
+
+<!--
+<p>Signed? {{pr.Signed}} , Amount? {{pr.Amt}}, Address? {{pr.Addr}}, Reference? {{pr.Ref}}, Expires? {{pr.Exp}}, Description? {{pr.Desc}}, PayAck? {{pr.Ack}}, BitAddr? {{pr.TradPR}}, BitPay? {{pr.PR}}, Refund? {{pr.RefAddr}}    </p>
+-->
+<p>
+  <div ng-if="pr.TradPR">
+    Traditional Bitcoin URL: <a href="bitcoin:{{pr.Addr}}?amount={{pr.Amt}}&label={{pr.Desc}}">bitcoin:{{pr.Addr}}?amount={{pr.Amt}}&label={{pr.Desc|limitTo:50}}</a>
+  </div>
+</p>
+<p>
+  <div ng-if="pr.PR">
+    Please click "Submit" to generate a payment request.
+  </div>
+</p>
+
+</div>
+
+</div>
