Login pages for Insight front end

--- a/public/views/includes/header.html
+++ b/public/views/includes/header.html
@@ -43,7 +43,7 @@
       </div>
       </li>
       <li>
-	<a href="/PR"><span class="glyphicon glyphicon-shopping-cart"></span> PayReq</a>
+	<a href="/PR"><span class="glyphicon glyphicon-shopping-cart"></span></a>
       </li>
       <li>
         <a href="#" data-ng-click="openScannerModal()"><span class="glyphicon glyphicon-qrcode"></span> Scan</a>
