--- a/public/views/index.html
+++ b/public/views/index.html
@@ -75,6 +75,9 @@ Check out the <a href="http://github.com/bitpay/insight" target="_blank">source 
           <a href="https://code.google.com/p/leveldb/" target="_blank" class="leveldb" title="LevelDB"></a>
           <a href="http://nodejs.org" target="_blank" class="nodejs" title="NodeJs"></a>
         </div>
+	<div class="row text-center">
+	  <a href="/login" class="btn btn-default">Login/Register</a>
+	</div>
       </div> <!-- END OF COL-3 -->
     </div>
   </div>
