Updated login.html with fixed checkbox

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -43,7 +43,7 @@
 	 <div class="input-group pull-right" style="margin-right:10px">
 	  <div class="checkbox">
 	   <input type="checkbox" name="loginremember" id="loginremember" ng-model="login.remember">
-	   Remember me?
+	   <label for="loginremember">Remember me?
 	  </div>
 	 </div>
 	</div><!-- // row text-center -->
