--- a/public/views/login.html
+++ b/public/views/login.html
@@ -4,13 +4,19 @@
 
  <script type="text/ng-template" id="resetpasswd.html">
         <div class="modal-header">
-            <h3 class="modal-title">I'm a modal!</h3>
+            <h3 class="modal-title">Password Reset</h3>
         </div>
         <div class="modal-body">
-		asdf
-	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" href="#">OK</button>	
+	 	<form name="resetpwform" class="form-horizontal" role="form" action="#" novalidate>
+		  <fieldset>
+			<div class="form-group">
+			  <label for="resetpwemail">Email </label>
+			  <input class="form-control" type="email" name="resetpwemail" id="resetpwemail" placeholder="you@areawesome.com" ng-model="resetpw.resetpwemail">
+			</div>
+	 		<button id="startPwdReset" name="startPwdReset" class="btn btn-primary pull-right"  ng-disabled="!resetpw.resetpwemail">Start Reset </button>
+	 		<button class="btn btn-danger pull-right" ng-click="cancel()" >Cancel </button>
+		  </fieldset>
+		</form>
 	</div>
  </script>
 
@@ -43,7 +49,7 @@
 	 <div class="input-group pull-right" style="margin-right:10px">
 	  <div class="checkbox">
 	   <input type="checkbox" name="loginremember" id="loginremember" ng-model="login.remember">
-	   <label for="loginremember">Remember me?
+	   <label for="loginremember">Remember me?</label>
 	  </div>
 	 </div>
 	</div><!-- // row text-center -->
